# testOpencvInstall

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  README.md  auto.sh  testopencvinstall.pro  xmake.lua
hello_rust/: Cargo.toml  Makefile
hello_rust/.cargo/: config.toml
hello_rust/src/: main.rs
src/: DisplayImage.cpp
